Fix create/insert and refactors (#1)