@@ -24,8 +24,8 @@ public class CdbNative {
     }
 
     private static Path GetCdbLib() throws SQLException {
-        var dir = GetOsDir();
-        var resourceName = String.format("com/cdb/%s/cdb.so", dir);
+        var dir = GetOsFile();
+        var resourceName = String.format("com/cdb/%s", dir);
         var loader = CdbNative.class.getClassLoader();
         var r = loader.getResourceAsStream(resourceName);
         Path tempFile;
@@ -44,20 +44,20 @@ public class CdbNative {
         return tempFile;
     }
 
-    private static String GetOsDir() {
+    private static String GetOsFile() {
         var osName = System.getProperty("os.name").toLowerCase();
         var osArchName = System.getProperty("os.arch").toLowerCase();
         if (osName.contains("mac")) {
             if (osArchName.contains("aarch64"))
-                return "mac/arm64";
+                return "mac-arm64-cdb.so";
             if (osArchName.contains("x86"))
-                return "mac/x86_64";
+                return "mac-amd64-cdb.so";
         }
         if (osName.contains("linux")) {
             if (osArchName.contains("aarch64"))
-                return "linux/aarch64";
+                return "linux-arm64-cdb.so";
             if (osArchName.contains("amd64"))
-                return "linux/amd64";
+                return "linux-amd64-cdb.so";
         }
         throw new Error("no lib for platform " + osName + "/" + osArchName);
     }
@@ -71,66 +71,69 @@ public class CdbNative {
     public static void newDb(String filename) throws SQLException {
         final String nativeName = "cdb_new_db";
         var linker = Linker.nativeLinker();
-        var a = Arena.global();
-        var f = _lib.find(nativeName).orElseThrow();
-        var fd = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS);
-        var fh = linker.downcallHandle(f, fd);
-        MemorySegment nativeString = a.allocateUtf8String(filename);
-        int result;
-        try {
-            result = (int) fh.invokeExact(nativeString);
-        } catch (Throwable e) {
-            throw new SQLException("failed to invoke " + nativeName, e);
+        try (var a = Arena.ofConfined()) {
+            var f = _lib.find(nativeName).orElseThrow();
+            var fd = FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS);
+            var fh = linker.downcallHandle(f, fd);
+            MemorySegment nativeString = a.allocateUtf8String(filename);
+            int result;
+            try {
+                result = (int) fh.invokeExact(nativeString);
+            } catch (Throwable e) {
+                throw new SQLException("failed to invoke " + nativeName, e);
+            }
+            throwForCode(result, nativeName);
         }
-        throwForCode(result, nativeName);
     }
 
     public static void closeDb(String filename) throws SQLException {
         final String nativeName = "cdb_close_db";
         var linker = Linker.nativeLinker();
-        var a = Arena.global();
-        var f = _lib.find(nativeName).orElseThrow();
-        var fd = FunctionDescriptor.ofVoid(ValueLayout.ADDRESS);
-        var fh = linker.downcallHandle(f, fd);
-        MemorySegment nativeString = a.allocateUtf8String(filename);
-        try {
-            fh.invokeExact(nativeString);
-        } catch (Throwable e) {
-            throw new SQLException("failed to invoke " + nativeName, e);
+        try (var a = Arena.ofConfined()) {
+            var f = _lib.find(nativeName).orElseThrow();
+            var fd = FunctionDescriptor.ofVoid(ValueLayout.ADDRESS);
+            var fh = linker.downcallHandle(f, fd);
+            MemorySegment nativeString = a.allocateUtf8String(filename);
+            try {
+                fh.invokeExact(nativeString);
+            } catch (Throwable e) {
+                throw new SQLException("failed to invoke " + nativeName, e);
+            }
         }
     }
 
     public static int prepare(String filename, String sql) throws SQLException {
         final String nativeName = "cdb_prepare";
         var linker = Linker.nativeLinker();
-        var a = Arena.global();
-        var f = _lib.find(nativeName).orElseThrow();
-        var fd = FunctionDescriptor.of(
-                ValueLayout.JAVA_INT,
-                ValueLayout.ADDRESS,
-                ValueLayout.ADDRESS,
-                ValueLayout.ADDRESS,
-                ValueLayout.ADDRESS);
-        var fh = linker.downcallHandle(f, fd);
-        MemorySegment nativeFilename = a.allocateUtf8String(filename);
-        MemorySegment nativeSql = a.allocateUtf8String(sql);
-        MemorySegment prepareErr = a.allocate(ValueLayout.ADDRESS);
-        var prepareId = a.allocate(ValueLayout.JAVA_INT, 0);
-        int result;
-        try {
-            result = (int) fh.invokeExact(prepareId, nativeFilename, nativeSql, prepareErr);
-        } catch (Throwable e) {
-            throw new SQLException("failed to invoke " + nativeName, e);
+        try (var a = Arena.ofConfined()) {
+            var f = _lib.find(nativeName).orElseThrow();
+            var fd = FunctionDescriptor.of(
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.ADDRESS,
+                    ValueLayout.ADDRESS,
+                    ValueLayout.ADDRESS,
+                    ValueLayout.ADDRESS);
+            var fh = linker.downcallHandle(f, fd);
+            MemorySegment nativeFilename = a.allocateUtf8String(filename);
+            MemorySegment nativeSql = a.allocateUtf8String(sql);
+            MemorySegment prepareErr = a.allocate(ValueLayout.ADDRESS);
+            var prepareId = a.allocate(ValueLayout.JAVA_INT, 0);
+            int result;
+            try {
+                result = (int) fh.invokeExact(prepareId, nativeFilename, nativeSql, prepareErr);
+            } catch (Throwable e) {
+                throw new SQLException("failed to invoke " + nativeName, e);
+            }
+            if (result == 2) {
+                var prepErrString = prepareErr
+                        .get(ValueLayout.ADDRESS, 0)
+                        .reinterpret(Long.MAX_VALUE)
+                        .getUtf8String(0);
+                throw new SQLException("prepare failed with err: ", prepErrString);
+            }
+            throwForCode(result, nativeName);
+            return prepareId.get(ValueLayout.JAVA_INT, 0);
         }
-        if (result == 2) {
-            var prepErrString = prepareErr
-                .get(ValueLayout.ADDRESS, 0)
-                .reinterpret(Long.MAX_VALUE)
-                .getUtf8String(0);
-            throw new SQLException("prepare failed with err: ", prepErrString);
-        }
-        throwForCode(result, nativeName);
-        return prepareId.get(ValueLayout.JAVA_INT, 0);
     }
 
     public static void closeStatement(int prepareId) throws SQLException {
@@ -167,21 +170,22 @@ public class CdbNative {
     public static void bindString(int prepareId, String bound) throws SQLException {
         final String nativeName = "cdb_bind_string";
         var linker = Linker.nativeLinker();
-        var a = Arena.global();
-        var f = _lib.find(nativeName).orElseThrow();
-        var fd = FunctionDescriptor.of(
-                ValueLayout.JAVA_INT,
-                ValueLayout.JAVA_INT,
-                ValueLayout.ADDRESS);
-        var fh = linker.downcallHandle(f, fd);
-        MemorySegment nativeBound = a.allocateUtf8String(bound);
-        int result;
-        try {
-            result = (int) fh.invokeExact(prepareId, nativeBound);
-        } catch (Throwable e) {
-            throw new SQLException("failed to invoke " + nativeName, e);
+        try (var a = Arena.ofConfined()) {
+            var f = _lib.find(nativeName).orElseThrow();
+            var fd = FunctionDescriptor.of(
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.ADDRESS);
+            var fh = linker.downcallHandle(f, fd);
+            MemorySegment nativeBound = a.allocateUtf8String(bound);
+            int result;
+            try {
+                result = (int) fh.invokeExact(prepareId, nativeBound);
+            } catch (Throwable e) {
+                throw new SQLException("failed to invoke " + nativeName, e);
+            }
+            throwForCode(result, nativeName);
         }
-        throwForCode(result, nativeName);
     }
 
     public static void execute(int prepareId) throws SQLException {
@@ -202,167 +206,174 @@ public class CdbNative {
     public static String resultErr(int prepareId) throws SQLException {
         final String nativeName = "cdb_result_err";
         var linker = Linker.nativeLinker();
-        var a = Arena.global();
-        var f = _lib.find(nativeName).orElseThrow();
-        var fd = FunctionDescriptor.of(
-                ValueLayout.JAVA_INT,
-                ValueLayout.JAVA_INT,
-                ValueLayout.ADDRESS,
-                ValueLayout.ADDRESS);
-        var fh = linker.downcallHandle(f, fd);
-        var hasError = a.allocate(ValueLayout.JAVA_INT, 1);
-        var errMessage = a.allocate(ValueLayout.ADDRESS);
-        int result;
-        try {
-            result = (int) fh.invokeExact(prepareId, hasError, errMessage);
-        } catch (Throwable e) {
-            throw new SQLException("failed to invoke " + nativeName, e);
+        try (var a = Arena.ofConfined()) {
+            var f = _lib.find(nativeName).orElseThrow();
+            var fd = FunctionDescriptor.of(
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.ADDRESS,
+                    ValueLayout.ADDRESS);
+            var fh = linker.downcallHandle(f, fd);
+            var hasError = a.allocate(ValueLayout.JAVA_INT, 1);
+            var errMessage = a.allocate(ValueLayout.ADDRESS);
+            int result;
+            try {
+                result = (int) fh.invokeExact(prepareId, hasError, errMessage);
+            } catch (Throwable e) {
+                throw new SQLException("failed to invoke " + nativeName, e);
+            }
+            throwForCode(result, nativeName);
+            var v = hasError.get(ValueLayout.JAVA_INT, 0);
+            if (v == 0) {
+                return "";
+            }
+            return errMessage
+                    .get(ValueLayout.ADDRESS, 0)
+                    .reinterpret(Long.MAX_VALUE)
+                    .getUtf8String(0);
         }
-        throwForCode(result, nativeName);
-        var v = hasError.get(ValueLayout.JAVA_INT, 0);
-        if (v == 0) {
-            return "";
-        }
-        return errMessage
-                .get(ValueLayout.ADDRESS, 0)
-                .reinterpret(Long.MAX_VALUE)
-                .getUtf8String(0);
     }
 
     public static boolean resultRow(int prepareId) throws SQLException {
         final String nativeName = "cdb_result_row";
         var linker = Linker.nativeLinker();
-        var a = Arena.global();
-        var f = _lib.find(nativeName).orElseThrow();
-        var fd = FunctionDescriptor.of(
-                ValueLayout.JAVA_INT,
-                ValueLayout.JAVA_INT,
-                ValueLayout.ADDRESS);
-        var fh = linker.downcallHandle(f, fd);
-        var hasRow = a.allocate(ValueLayout.JAVA_INT, 0);
-        int result;
-        try {
-            result = (int) fh.invokeExact(prepareId, hasRow);
-        } catch (Throwable e) {
-            throw new SQLException("failed to invoke " + nativeName, e);
+        try (var a = Arena.ofConfined()) {
+            var f = _lib.find(nativeName).orElseThrow();
+            var fd = FunctionDescriptor.of(
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.ADDRESS);
+            var fh = linker.downcallHandle(f, fd);
+            var hasRow = a.allocate(ValueLayout.JAVA_INT, 0);
+            int result;
+            try {
+                result = (int) fh.invokeExact(prepareId, hasRow);
+            } catch (Throwable e) {
+                throw new SQLException("failed to invoke " + nativeName, e);
+            }
+            throwForCode(result, nativeName);
+            var v = hasRow.get(ValueLayout.JAVA_INT, 0);
+            return v != 0;
         }
-        throwForCode(result, nativeName);
-        var v = hasRow.get(ValueLayout.JAVA_INT, 0);
-        return v != 0;
     }
 
     public static int resultColInt(int prepareId, int colIdx) throws SQLException {
         final String nativeName = "cdb_result_col_int";
         var linker = Linker.nativeLinker();
-        var a = Arena.global();
-        var f = _lib.find(nativeName).orElseThrow();
-        var fd = FunctionDescriptor.of(
-                ValueLayout.JAVA_INT,
-                ValueLayout.JAVA_INT,
-                ValueLayout.JAVA_INT,
-                ValueLayout.ADDRESS);
-        var fh = linker.downcallHandle(f, fd);
-        var resultCol = a.allocate(ValueLayout.ADDRESS);
-        int result;
-        try {
-            result = (int) fh.invokeExact(prepareId, colIdx, resultCol);
-        } catch (Throwable e) {
-            throw new SQLException("failed to invoke " + nativeName, e);
+        try (var a = Arena.ofConfined()) {
+            var f = _lib.find(nativeName).orElseThrow();
+            var fd = FunctionDescriptor.of(
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.ADDRESS);
+            var fh = linker.downcallHandle(f, fd);
+            var resultCol = a.allocate(ValueLayout.ADDRESS);
+            int result;
+            try {
+                result = (int) fh.invokeExact(prepareId, colIdx, resultCol);
+            } catch (Throwable e) {
+                throw new SQLException("failed to invoke " + nativeName, e);
+            }
+            throwForCode(result, nativeName);
+            return resultCol.get(ValueLayout.JAVA_INT, 0);
         }
-        throwForCode(result, nativeName);
-        return resultCol.get(ValueLayout.JAVA_INT, 0);
     }
 
     public static String resultColString(int prepareId, int colIdx) throws SQLException {
         final String nativeName = "cdb_result_col_string";
         var linker = Linker.nativeLinker();
-        var a = Arena.global();
-        var f = _lib.find(nativeName).orElseThrow();
-        var fd = FunctionDescriptor.of(
-                ValueLayout.JAVA_INT,
-                ValueLayout.JAVA_INT,
-                ValueLayout.JAVA_INT,
-                ValueLayout.ADDRESS);
-        var fh = linker.downcallHandle(f, fd);
-        var resultPtr = a.allocate(ValueLayout.ADDRESS);
-        int errCode;
-        try {
-            errCode = (int) fh.invokeExact(prepareId, colIdx, resultPtr);
-        } catch (Throwable e) {
-            throw new SQLException("failed to invoke " + nativeName, e);
+        try (var a = Arena.ofConfined()) {
+            var f = _lib.find(nativeName).orElseThrow();
+            var fd = FunctionDescriptor.of(
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.ADDRESS);
+            var fh = linker.downcallHandle(f, fd);
+            var resultPtr = a.allocate(ValueLayout.ADDRESS);
+            int errCode;
+            try {
+                errCode = (int) fh.invokeExact(prepareId, colIdx, resultPtr);
+            } catch (Throwable e) {
+                throw new SQLException("failed to invoke " + nativeName, e);
+            }
+            throwForCode(errCode, nativeName);
+            return resultPtr
+                    .get(ValueLayout.ADDRESS, 0)
+                    .reinterpret(Long.MAX_VALUE)
+                    .getUtf8String(0);
         }
-        throwForCode(errCode, nativeName);
-        return resultPtr
-                .get(ValueLayout.ADDRESS, 0)
-                .reinterpret(Long.MAX_VALUE)
-                .getUtf8String(0);
     }
 
     public static int resultColCount(int prepareId) throws SQLException {
         final String nativeName = "cdb_result_col_count";
         var linker = Linker.nativeLinker();
-        var a = Arena.global();
-        var f = _lib.find(nativeName).orElseThrow();
-        var fd = FunctionDescriptor.of(
-                ValueLayout.JAVA_INT,
-                ValueLayout.JAVA_INT,
-                ValueLayout.ADDRESS);
-        var fh = linker.downcallHandle(f, fd);
-        var resultPtr = a.allocate(ValueLayout.ADDRESS);
-        int errCode;
-        try {
-            errCode = (int) fh.invokeExact(prepareId, resultPtr);
-        } catch (Throwable e) {
-            throw new SQLException("failed to invoke " + nativeName, e);
+        try (var a = Arena.ofConfined()) {
+            var f = _lib.find(nativeName).orElseThrow();
+            var fd = FunctionDescriptor.of(
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.ADDRESS);
+            var fh = linker.downcallHandle(f, fd);
+            var resultPtr = a.allocate(ValueLayout.ADDRESS);
+            int errCode;
+            try {
+                errCode = (int) fh.invokeExact(prepareId, resultPtr);
+            } catch (Throwable e) {
+                throw new SQLException("failed to invoke " + nativeName, e);
+            }
+            throwForCode(errCode, nativeName);
+            return resultPtr.get(ValueLayout.JAVA_INT, 0);
         }
-        throwForCode(errCode, nativeName);
-        return resultPtr.get(ValueLayout.JAVA_INT, 0);
     }
 
     public static String resultColName(int prepareId, int colIdx) throws SQLException {
         final String nativeName = "cdb_result_col_name";
         var linker = Linker.nativeLinker();
-        var a = Arena.global();
-        var f = _lib.find(nativeName).orElseThrow();
-        var fd = FunctionDescriptor.of(
-                ValueLayout.JAVA_INT,
-                ValueLayout.JAVA_INT,
-                ValueLayout.JAVA_INT,
-                ValueLayout.ADDRESS);
-        var fh = linker.downcallHandle(f, fd);
-        var resultPtr = a.allocate(ValueLayout.ADDRESS);
-        int errCode;
-        try {
-            errCode = (int) fh.invokeExact(prepareId, colIdx, resultPtr);
-        } catch (Throwable e) {
-            throw new SQLException("failed to invoke " + nativeName, e);
+        try (var a = Arena.ofConfined()) {
+            var f = _lib.find(nativeName).orElseThrow();
+            var fd = FunctionDescriptor.of(
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.ADDRESS);
+            var fh = linker.downcallHandle(f, fd);
+            var resultPtr = a.allocate(ValueLayout.ADDRESS);
+            int errCode;
+            try {
+                errCode = (int) fh.invokeExact(prepareId, colIdx, resultPtr);
+            } catch (Throwable e) {
+                throw new SQLException("failed to invoke " + nativeName, e);
+            }
+            throwForCode(errCode, nativeName);
+            return resultPtr
+                    .get(ValueLayout.ADDRESS, 0)
+                    .reinterpret(Long.MAX_VALUE)
+                    .getUtf8String(0);
         }
-        throwForCode(errCode, nativeName);
-        return resultPtr
-            .get(ValueLayout.ADDRESS, 0)
-            .reinterpret(Long.MAX_VALUE)
-            .getUtf8String(0);
     }
 
     public static int resultColType(int prepareId, int colIdx) throws SQLException {
         final String nativeName = "cdb_result_col_type";
         var linker = Linker.nativeLinker();
-        var a = Arena.global();
-        var f = _lib.find(nativeName).orElseThrow();
-        var fd = FunctionDescriptor.of(
-                ValueLayout.JAVA_INT,
-                ValueLayout.JAVA_INT,
-                ValueLayout.JAVA_INT,
-                ValueLayout.ADDRESS);
-        var fh = linker.downcallHandle(f, fd);
-        var resultPtr = a.allocate(ValueLayout.ADDRESS);
-        int errCode;
-        try {
-            errCode = (int) fh.invokeExact(prepareId, colIdx, resultPtr);
-        } catch (Throwable e) {
-            throw new SQLException("failed to invoke " + nativeName, e);
+        try (var a = Arena.ofConfined()) {
+            var f = _lib.find(nativeName).orElseThrow();
+            var fd = FunctionDescriptor.of(
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.JAVA_INT,
+                    ValueLayout.ADDRESS);
+            var fh = linker.downcallHandle(f, fd);
+            var resultPtr = a.allocate(ValueLayout.ADDRESS);
+            int errCode;
+            try {
+                errCode = (int) fh.invokeExact(prepareId, colIdx, resultPtr);
+            } catch (Throwable e) {
+                throw new SQLException("failed to invoke " + nativeName, e);
+            }
+            throwForCode(errCode, nativeName);
+            return resultPtr.get(ValueLayout.JAVA_INT, 0);
         }
-        throwForCode(errCode, nativeName);
-        return resultPtr.get(ValueLayout.JAVA_INT, 0);
     }
 }
